--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="assets/icons/meteocons/style.css" rel="stylesheet">
+  <link href="assets/icons/material-icons/outline/style.css" rel="stylesheet">
 
   <style type="text/css">
     #kdev-splash-screen {
