--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>Kdev - Angular 7 Material Design Boilerplate</title>
   <base href="/">
 
-  <meta name="description" content="Material design admin template">
-  <meta name="keywords" content="HTML,CSS,Angular,Angular 7,Material">
+  <meta name="description" content="Angular Material design admin template">
+  <meta name="keywords" content="HTML,CSS,Angular,Angular 7,Material,Boilerplate">
   <meta name="author" content="KDevSoftware">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
