--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
   <link href="assets/icons/meteocons/style.css" rel="stylesheet">
   <link href="assets/icons/material-icons/outline/style.css" rel="stylesheet">
 
